@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-13T08:22:33Z",
-  "count_outdated" : 1732,
-  "uniques_outdated" : 315,
+  "timestamp" : "2022-04-14T01:36:11Z",
+  "count_outdated" : 1734,
+  "uniques_outdated" : 316,
   "count" : 1780,
   "uniques" : 336,
   "clones" : [
-    {
-      "timestamp": "2022-03-30T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-04-03T00:00:00Z",
       "count": 7,
