@@ -1,12 +1,7 @@
 {
-  "count": 48,
+  "count": 46,
   "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-03-30T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-03T00:00:00Z",
       "count": 7,
